-------
v4.2.20
-------




-------
v4.2.19
-------

[mjr] SECURITY: Fix multiple XSS vulnerabilities when displaying and filtering
      task lists.


-------
v4.2.18
-------

[mjr] Fix handling of recurring task completion over EAS.
[mjr] Fix issue with NULL created dates breaking EAS.
[jan] Fix notice when re-exporting tasks without priority (Bug #14699).
[jan] Fix regression in exporting single tags to iCalendar CATEGORIES (Bug
      #14699).


-------
v4.2.17
-------

[jan] SECURITY: Fix unauthorized access to task exports.
[jan] Fix regression when exporting single tags to iCalendar CATEGORIES.
[jan] Officially support PHP 7.


-------
v4.2.16
-------

[jan] Fix parsing sub-tasks from the quick enter dialog (Bug #14681).
[jan] Fix positioning of due time drop down list (Bug #12288).
[jan] Improve compatibilty when synchronizing tasks via CalDAV/ICS (Bug
      #14057).
[jan] Fix exporting multiple tags to iCalendar CATEGORIES (Bug #14057).
[jan] Don't include external tasks into drop down list for parent tasks.
[jan] Fix redirecting to task list after completing a task (Bug #14678).


-------
v4.2.15
-------

[jan] SECURITY: Fix open redirects.
[mjr] Fix handling of delayed start dates (Bug #14634).


-------
v4.2.14
-------

[mjr] Fix saving sync preference when no default tasklist exists (Bug #14585).
[mjr] Avoid PHP warnings due to corrupt preference values (Bug #14585).


-------
v4.2.13
-------

[jan] Fix sorting by due date with PHP < 5.5 (Bug #14507).


-------
v4.2.12
-------

[mjr] Fix fatal error caused by regression in sorting recurring tasks with due
      dates (Bug #14504).


-------
v4.2.11
-------

[mjr] Fix sorting recurring tasks by due date (Bug #14403).


-------
v4.2.10
-------

[mjr] Fix handling of start and due dates when synching via EAS.
[jan] Avoid fatal errors if tasks don't have a UID.
[mjr] Fix parsing certain date formats (Bug #14348).
[jan] Fix deleteing alarms when completing a task.