@@ -2,7 +2,8 @@
 v4.2.20
 -------
 
-
+[mjr] Fix generating view links from searchTag API.
+|+
 
 
 -------
